fix link clicks, icon spacing

--- a/src/index.css
+++ b/src/index.css
@@ -71,7 +71,6 @@ h2 {
   display: flex;
   justify-content: space-between;
   padding: 60px;
-  z-index: -1;
 }
 
 code {
@@ -160,7 +159,9 @@ code {
   box-shadow: 0px 2px 50px -10px #A850D8;
   margin-left: auto;
   margin-right: auto;
+  position: relative;
   width: 250px;
+  z-index: 1;
 }
 
 #iconsContainer {
@@ -210,8 +211,8 @@ code {
   .banner {
     margin-top: -70px;
     min-height: 500px;
+    padding: 40px;
     padding-top: 100px;
-    z-index: -1;
   }
 
   .rec {
@@ -233,5 +234,9 @@ code {
   .rec-text {
     margin: 25px;
     padding: 60px 10px 0px 10px;
+  }
+
+  #iconsContainer {
+    justify-content: space-between;
   }
 }
